--- a/site-jogos/index.html
+++ b/site-jogos/index.html
@@ -112,7 +112,7 @@
       <img src="images/name.png" alt="name">
     </div>
     <div>
-      <a href="#">VOLTAR PARA O TOPO</a>
+      <a href="#backToTop">VOLTAR PARA O TOPO</a>
     </div>
   </footer>
 </body>
